syntax = "proto3";

option csharp_namespace = "KwikNesta.SystemSupport.Svc.Contracts";
import "google/protobuf/timestamp.proto";

service AuditLogsService {
    //Gets paginated list of audit logs sorted by latest ones
	rpc GetAuditLogsList (GetAuditLogsListRequest) returns (GetAuditLogsListResponse);
}

message GetAuditLogsListRequest {
  string search = 1;
  int32 page = 2;
  int32 size = 3;
  optional GrpcAuditLogAction action = 4;
  optional GrpcAuditLogDomain domain = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Timestamp end_time = 7;
}

//-------------------------Response Models------------------
message GrpcAuditLog {
    string performed_by = 1;
    string performed_on = 2;
    string action = 3;
    string domain = 4;
    google.protobuf.Timestamp time_stamp = 5;
}

message GrpcAuditLogPageMetaData {
  int32 total_count = 1;
  int32 page = 2;
  int32 size = 3;
  bool has_previous = 4;
  bool has_next = 5;
}

message GetAuditLogsListResponse {
    repeated GrpcAuditLog audit_logs = 1;
    GrpcAuditLogPageMetaData meta_data = 2;
}

//-------------------------Enums----------------------------
enum GrpcAuditLogDomain {
    NO_DOMAIN = 0;
    IDENTITY = 1;
    SYSTEM = 2;
    PROPERTY = 3;
    BOOKING = 4;
    PAYMENT = 5;
    LEASE = 6;
    COMMUNICATION = 7;
    SECURITY = 8;
}

enum GrpcAuditLogAction {
    NO_ACTION = 0;
    LOGGED_IN = 1;
    LOGGED_OUT = 2;
    UPDATED_PROFILE = 3;
    DEACTIVATED_ACCOUNT = 4;
    REACTIVATED_ACCOUNT = 5;
    SUSPENDED_ACCOUNT = 6;
    CHANGED_PASSWORD = 7;
    DATALOAD_REQUEST = 8;
    DATALOAD_COMPLETED = 9;
    CONFIGURATION_UPDATED = 10;
    SYSTEM_JOB_EXECUTED = 11;
    PROPERTY_CREATED = 12;
    PROPERTY_UPDATED = 13;
    PROPERTY_DEACTIVATED = 14;
    PROPERTY_REACTIVATED = 15;
    PROPERTY_REMOVED = 16;
    BOOKING_CREATED = 17;
    BOOKING_UPDATED = 18;
    BOOKING_CANCELLED = 19;
    APPLICATION_SUBMITTED = 20;
    APPLICATION_APPROVED = 21;
    APPLICATION_REJECTED = 22;
    PAYMENT_INITIATED = 23;
    PAYMENT_SUCCESSFUL = 24;
    PAYMENT_FAILED = 25;
    REFUND_ISSUED = 26;
    DEPOSIT_COLLECTED = 27;
    DEPOSIT_REFUNDED = 28;
    LEASE_GENERATED = 29;
    LEASE_SIGNED = 30;
    LEASE_RENEWED = 31;
    LEASE_TERMINATED = 32;
    NOTIFICATION_SENT = 33;
    MESSAGE_SENT = 34;
    MESSAGE_RECEIVED = 35;
    FAILED_LOGIN_ATTEMPT = 36;
    SUSPICIOUS_ACTIVITY_DETECTED = 37;
    DATA_EXPORTED = 38;
    DATA_ACCESSED = 39;
}