syntax = "proto3";

option csharp_namespace = "KwikNesta.Gateway.Svc.API.Grpc.SystemSupport";

service LocationService {
  rpc GetCountries (PagedRequest) returns (CountriesResponse);
  rpc GetCountryById (IdRequest) returns (CountryResponse);
  rpc GetStatesByCountry (CountryIdAndPagedRequest) returns (StatesResponse);
  rpc GetStateById (IdRequest) returns (StateResponse);
  rpc GetCitiesByCountryAndState (CountryAndStateIdsRequest) returns (CitiesResponse);
  rpc GetCityById (IdRequest) returns (CityResponse);
}

// --- Common request types ---

message PagedRequest {
  string search = 1;
  int32 page = 2;
  int32 size = 3;
}

message IdRequest {
  string id = 1;
}

message CountryIdAndPagedRequest {
  string country_id = 1;
  PagedRequest query = 2;
}

message CountryAndStateIdsRequest {
  string country_id = 1;
  string state_id = 2;
  PagedRequest query = 3;
}

// --- Models ---

message TimeZone {
  string zone_name = 1;
  int64 gmt_offset = 2;
  string gmt_offset_name = 3;
  string abbreviation = 4;
  string tz_name = 5;
}

message PageMetaData {
  int32 total_count = 1;
  int32 page = 2;
  int32 size = 3;
  bool has_previous = 4;
  bool has_next = 5;
}

message CountryResponse {
  string id = 1;
  string name = 2;
  string iso2 = 3;
  string iso3 = 4;
  string phone_code = 5;
  string currency_name = 6;
  string currency_symbol = 7;
  string capital = 8;
  string region = 9;
  string sub_region = 10;
  string nationality = 11;
  string longitude = 12;
  string latitude = 13;
  string emoji = 14;
  string emoji_unicode = 15;
  string tld = 16;
  repeated TimeZone time_zones = 17;
}

message StateResponse {
  string id = 1;
  string name = 2;
  string country_id = 3;
  string country_code = 4;
  string iso2 = 5;
  string longitude = 6;
  string latitude = 7;
  string type = 8;
}

message CityResponse {
  string id = 1;
  string name = 2;
  string country_id = 3;
  string state_id = 4;
  string longitude = 5;
  string latitude = 6;
}

message CountriesResponse {
  repeated CountryResponse countries = 1;
  PageMetaData meta_data = 2;
  
}

message StatesResponse {
  repeated StateResponse states = 1;
  PageMetaData meta_data = 2;
}

message CitiesResponse {
  repeated CityResponse cities = 1;
  PageMetaData meta_data = 2;
}